# NextViewPlanning

./: .gitignore  CMakeLists.txt  README.md  scan_1.ply  scan_2.ply  scan_5.ply
CMake/: FindANN.cmake
models/: _cube.ply
output/: _out_armadillo.ply  _out_cube.ply
src/: Camera.cpp  Camera.h  NextBestView.cpp  NextBestView.h  PointCloud.cpp  PointCloud.h  converter.cpp  converter.h  defs.h  main.cpp  utilities.cpp  utilities.h
